Modernize codebase with JDK 8-21 features 74 files: instanceof patterns, switch expressions, List.of(), lambdas, String.repeat(), diamond operator, try-with-resources