@@ -36,7 +36,6 @@ import java.net.URLDecoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -229,12 +228,12 @@ public class QueryStringDecoder {
             if (hasPath) {
                 int pathLength = getPath().length();
                 if (uri.length() == pathLength) {
-                    return Collections.emptyMap();
+                    return Map.of();
                 }
                 decodeParams(uri.substring(pathLength + 1));
             } else {
                 if (uri.length() == 0) {
-                    return Collections.emptyMap();
+                    return Map.of();
                 }
                 decodeParams(uri);
             }
